--- a/registry-server/edocker.properties
+++ b/registry-server/edocker.properties
@@ -24,7 +24,7 @@
 #docker_command:show docker command when edocker is used
 docker_command=false
 #image_name:image name
-image_name="pamtrak06/registry"
+image_name="pamtrak06/registry-server"
 #build_path:path where is found Dockerfile
 build_path=build
 #build_args:build arguments
