--- a/registry-web/edocker.properties
+++ b/registry-web/edocker.properties
@@ -22,9 +22,9 @@
 #cron_build: build and start containers from crontab with @reboot cron_build_start.sh <edocker.properties paths>
 #cron_build=true
 #docker_command:show docker command when edocker is used
-docker_command=false
+#docker_command=false
 #image_name:image name
-image_name="pamtrak06/registry-frontend"
+image_name="pamtrak06/registry-web"
 #build_path:path where is found Dockerfile
 build_path=build
 #build_args:build arguments
@@ -38,9 +38,9 @@ build_path=build
 #build_file:name of the Dockerfile (Default is 'PATH/Dockerfile')
 #build_file="--file build/Dockerfile"
 #container_name:container
-container_name="registry-frontend"
+container_name="registry-web"
 #exposed_ports:exposed port
-exposed_ports="-p 8082:8080"
+exposed_ports="-p 8080:8080"
 #shared_volumes:shared volumes
 #shared_volumes="-v $PWD/volumes/registry-dev:/tmp/registry-dev -v $PWD/volumes/registry:/var/lib/registry"
 shared_volumes="-v $PWD/volumes/config.yml:/conf/config.yml:ro"
